<?xml version="1.0"?>
<package format="2">
  <name>motion_plan</name>
  <version>1.0.0</version>
  <description>The motion plan package</description>

  <maintainer email="r960411@gmail.com">youjun</maintainer>
  <url type="website">https://www.iarc.tku.edu.tw/</url>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>pluginlib</depend>
  <depend>std_srvs</depend>
  <depend>ompl</depend>

  <export>
    <moveit_core plugin="${prefix}/ompl_interface_plugin_description.xml" />
  </export>

</package>
