<?xml version="1.0"?>
<package format="3">
  <name>motion_plan</name>
  <version>2.0.0</version>
  <description>The motion plan package</description>

  <maintainer email="r960411@gmail.com">youjun</maintainer>
  <url type="website">https://www.iarc.tku.edu.tw/</url>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>ompl</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/ompl_interface_plugin_description.xml" />
  </export>

</package>
