<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_capability</name>
  <version>1.0.8</version>
  <description>The move group capability for MoveIt</description>
  <author email="808790017@gms.tku.edu.tw">Andy Chien</author>

  <maintainer email="808790017@gms.tku.edu.tw">Andy Chien</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend version_gte="1.11.2">pluginlib</depend>
  <depend>std_srvs</depend>

  <exec_depend>moveit_kinematics</exec_depend>

  <export>
    <moveit_ros_move_group plugin="${prefix}/moveit_capabilities_plugin_description.xml" />
    <build_type>ament_cmake</build_type>
  </export>

</package>
